テキストの追加機能を追加

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
   <body>
     <div class="input-area">
-      <input placeholder="todoを入力する" />
-      <button>登録</button>
+      <input id="input-text" placeholder="todoを入力する" />
+      <button id="add">登録</button>
     </div>
 
-    <div class="incomplete-area">
+    <div id="incomplete-list" class="incomplete-area">
       <p class="title">未完了の項目</p>
       <ul>
         <div class="list-item">
