テキストの削除、戻す機能を追加

--- a/index.html
+++ b/index.html
@@ -11,25 +11,14 @@
       <button id="add">登録</button>
     </div>
 
-    <div id="incomplete-list" class="incomplete-area">
+    <div class="incomplete-area">
       <p class="title">未完了の項目</p>
-      <ul>
-        <div class="list-item">
-          <li>リスト１</li>
-          <button>完了</button>
-          <button>削除</button>
-        </div>
-      </ul>
+      <ul id="incomplete-list"></ul>
     </div>
 
     <div class="complete-area">
       <p class="title">完了済みの項目</p>
-      <ul>
-        <div class="list-item">
-          <li>リスト１</li>
-          <button>未完了にする</button>
-        </div>
-      </ul>
+      <ul id="complete-list"></ul>
     </div>
 
     <script src="src/index.js"></script>
